# heron

./: .agent-ops.json  .env.example  .gitattributes  .gitignore  .olympus.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install.sh  justfile  project.yaml
server/: Cargo.toml  rustfmt.toml
server/app/dbview/: Cargo.toml
server/app/dbview/src/: calls.rs  main.rs  metrics.rs  turns.rs  ui.rs
server/app/heron/: Cargo.toml
server/app/heron-probe/: Cargo.toml
server/app/heron-probe/src/: config.rs  main.rs
server/app/heron/src/: lib.rs  main.rs  pipeline.rs
server/app/heron/tests/: cli_smoke.rs  pipeline_e2e.rs  signal_shutdown.rs
server/app/tokenscope/: Cargo.toml
server/app/tokenscope/src/: lib.rs  main.rs  pipeline.rs
server/app/tokenscope/tests/: cli_smoke.rs  pipeline_e2e.rs  signal_shutdown.rs
server/config/: default.toml  heron-probe.example.toml
server/h-api/: Cargo.toml
server/h-api/src/: extractors.rs  lib.rs  params.rs  response.rs
server/h-api/src/routes/: agent_sessions.rs  mod.rs  (+14 more)
server/h-api/tests/: duckdb_routes.rs  pcap_extract_route.rs
server/h-capture/: Cargo.toml  build.rs
server/h-capture/examples/: ebpf_smoke.rs  sigscan_probe.rs
server/h-capture/src/: cloud_probe.rs  factory.rs  heartbeat.rs  interfaces.rs  lib.rs  packet.rs  pcap_dump.rs  pcap_file.rs  pcap_live.rs  pcap_retention.rs  probe_uplink.rs  source.rs  synth.rs  testpki.rs  thin_probe.rs  tls.rs  transport_scale_test.rs  wire.rs
server/h-common/: Cargo.toml
server/h-common/src/: agent.rs  attribution.rs  config.rs  config_edit.rs  internal_metrics.rs  lib.rs  path.rs  process.rs  throttle.rs  version.rs
server/h-ebpf-common/: Cargo.toml
server/h-ebpf-common/src/: lib.rs
server/h-ebpf-prog/: Cargo.toml
server/h-ebpf-prog/.cargo/: config.toml
server/h-ebpf-prog/src/: main.rs
server/h-export/: Cargo.toml
server/h-export/src/: anthropic.rs  lib.rs  openai_chat.rs
server/h-llm/: Cargo.toml
server/h-llm/src/: agent_classifier.rs  model.rs  processor.rs  profile.rs  stage.rs  test_support.rs  token_estimator.rs  wire_api_registry.rs
server/h-llm/tests/: agent_primitives_fixtures.rs  keepalive_estimator_integration.rs  synth_e2e.rs
server/h-metrics/: Cargo.toml
server/h-metrics/src/: aggregator.rs  bucket.rs  stage.rs
server/h-metrics/tests/: dimensions.rs
server/h-pcap-extract/: Cargo.toml
server/h-pcap-extract/src/: candidates.rs  filter.rs  format.rs  lib.rs  merge.rs  output.rs  reader.rs  types.rs
server/h-pcap-extract/tests/: round_trip.rs
server/h-protocol/: Cargo.toml
server/h-protocol/benches/: hot_paths.rs
server/h-protocol/src/: flow.rs  http.rs  joiner.rs  lib.rs  model.rs  net.rs  stage.rs  tcp.rs
server/h-protocol/tests/: keepalive_pipeline.rs  synth_pipeline.rs
server/h-storage/: Cargo.toml
server/h-storage-clickhouse/: Cargo.toml  README.md
server/h-storage-clickhouse/src/: calls.rs  client.rs  distincts.rs  exchanges.rs  it.rs  lib.rs  metrics.rs  retention.rs  rows.rs  schema.rs  services.rs  sessions.rs  sql.rs  turns.rs
server/h-storage-duckdb/: Cargo.toml
server/h-storage-duckdb/src/: apps.rs  calls.rs  concurrent_tests.rs  distincts.rs  exchanges.rs  fault_injection.rs  lib.rs  metrics.rs  pool.rs  retention.rs  schema.rs  sessions.rs  turns.rs  util.rs
server/h-storage-duckdb/tests/: migrations.rs
server/h-storage/src/: backend.rs  buffer.rs  classify.rs  convert.rs  dialect.rs  lib.rs  pair_sweeper.rs  query.rs  retention.rs  sink.rs
server/h-turn/: Cargo.toml
server/h-turn/src/: lib.rs  model.rs  proxy_pair.rs  stage.rs  test_support.rs  tracker.rs
server/h-turn/tests/: corpus_golden.rs  integration.rs  redaction_over_wire.rs  reorder.rs  rollup.rs  wire_equivalence.rs
server/ts-api/: Cargo.toml
server/ts-api/src/: extractors.rs  lib.rs  params.rs  response.rs
server/ts-api/tests/: duckdb_routes.rs  pcap_extract_route.rs
server/ts-capture/: Cargo.toml
server/ts-capture/src/: cloud_probe.rs  factory.rs  heartbeat.rs  interfaces.rs  lib.rs  packet.rs  pcap_dump.rs  pcap_file.rs  pcap_live.rs  pcap_retention.rs  routing.rs  source.rs
server/ts-common/: Cargo.toml
server/ts-common/src/: agent.rs  config.rs  config_edit.rs  error.rs  internal_metrics.rs  lib.rs  path.rs  source_registry.rs  throttle.rs
server/ts-llm/: Cargo.toml
server/ts-llm/src/: agent_classifier.rs  agent_primitives.rs  anthropic.rs  detector.rs  lib.rs  model.rs  openai.rs  parsed_json.rs  processor.rs  profile.rs  provider_names.rs  provider_registry.rs  stage.rs  test_support.rs  wire_api_registry.rs
server/ts-llm/tests/: agent_primitives_fixtures.rs  keepalive_estimator_integration.rs
server/ts-metrics/: Cargo.toml
server/ts-metrics/src/: aggregator.rs  bucket.rs  lib.rs  model.rs  stage.rs
server/ts-metrics/tests/: dimensions.rs
server/ts-pcap-extract/: Cargo.toml
server/ts-pcap-extract/src/: candidates.rs  filter.rs  format.rs  lib.rs  merge.rs  output.rs  reader.rs  types.rs
server/ts-pcap-extract/tests/: round_trip.rs
server/ts-protocol/: Cargo.toml
server/ts-protocol/src/: flow.rs  http.rs  joiner.rs  lib.rs  model.rs  net.rs  stage.rs  tcp.rs
server/ts-protocol/tests/: keepalive_pipeline.rs
server/ts-proxy/: Cargo.toml
server/ts-proxy/src/: body.rs  ca.rs  capture.rs  forward.rs  lib.rs  redact.rs  server.rs  state.rs  tls.rs  tunnel.rs  upstream.rs
server/ts-proxy/tests/: connect_smoke.rs  forward_capture.rs  sse_streaming.rs
server/ts-storage/: Cargo.toml
server/ts-storage-duckdb/: Cargo.toml
server/ts-storage-duckdb/src/: apps.rs  calls.rs  concurrent_tests.rs  distincts.rs  exchanges.rs  fault_injection.rs  lib.rs  metrics.rs  pool.rs  retention.rs  schema.rs  sessions.rs  turns.rs  util.rs
server/ts-storage-duckdb/tests/: migrations.rs
server/ts-storage/src/: backend.rs  buffer.rs  duckdb.rs  lib.rs  pair_sweeper.rs  query.rs  retention.rs  sink.rs
server/ts-turn/: Cargo.toml
server/ts-turn/src/: lib.rs  model.rs  proxy_pair.rs  stage.rs  test_support.rs  tool_result_join.rs  tracker.rs
server/ts-turn/tests/: integration.rs  reorder.rs  rollup.rs
(+562 files in other folders)
