[workspace]
members = ["h-*", "app/*"]
# h-ebpf-prog is the BPF program: it builds for `bpfel-unknown-none` with a
# pinned nightly toolchain (see its rust-toolchain.toml) and must never be
# pulled into a host `cargo build`. h-capture's build.rs compiles it out-of-band
# via aya-build when the `ebpf` feature is on.
exclude = ["h-ebpf-prog"]
resolver = "2"

[workspace.package]
version = "0.5.6"
edition = "2021"
license = "Apache-2.0"

# Drop debug info from libduckdb-sys's bundled C++ amalgamation. The 290 .o
# files shrink from ~2.9 GB to ~170 MB, which dramatically speeds up linking
# of every test/dev binary (libduckdb is statically linked into ~8 binaries
# per `cargo test --workspace`). Release profile is unaffected.
[profile.dev.package.libduckdb-sys]
debug = false
opt-level = 1

[profile.test.package.libduckdb-sys]
debug = false
opt-level = 1

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = { version = "0.15", features = ["toml"] }
toml_edit = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "fmt"] }
time = { version = "0.3", features = ["formatting", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# Packet capture
pcap = "2"
libc = "0.2"
bytes = "1"
async-trait = "0.1"
zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "tcp-transport"] }

# Protocol parsing
httparse = "1"
uuid = { version = "1", features = ["v7"] }
bytemuck = { version = "1", features = ["derive"] }

# Response-body decompression (Content-Encoding: gzip/deflate). Pure-Rust
# backend (miniz_oxide) so the single static binary keeps building offline.
flate2 = "1"

# Benchmarking (dev-only; hot-path micro-benches — see h-protocol/benches/)
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
h-common = { path = "h-common" }
h-capture = { path = "h-capture" }
h-protocol = { path = "h-protocol" }
h-llm = { path = "h-llm" }
h-export = { path = "h-export" }
h-turn = { path = "h-turn" }
h-metrics = { path = "h-metrics" }
h-storage = { path = "h-storage" }
h-storage-duckdb = { path = "h-storage-duckdb" }
h-storage-clickhouse = { path = "h-storage-clickhouse" }
h-pcap-extract = { path = "h-pcap-extract" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
# Keep >= DuckDB 1.5.3 (crate 1.10503): 1.5.2/1.5.3 fix the checkpoint+ART
# bugs behind the prod outage — #22591 (ARTOperator::Delete on nested leaf),
# #22094 (RemoveFromIndexes / "remove all rows merging checkpoint deltas"),
# #22503 (BlockAllocator invalid memory access → the SIGSEGV). Cargo.lock pins it.
duckdb = { version = "1", features = ["bundled", "json"] }
# ClickHouse backend client — HTTP interface, serde RowBinary, async/Tokio.
# lz4 is the crate's default compression; kept explicit for clarity.
clickhouse = { version = "0.15", features = ["lz4"] }
chrono = "0.4"
tdigest = "0.2"
h-api = { path = "h-api" }
