[package]
name = "h-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
h-common.workspace = true
pcap.workspace = true
libc.workspace = true
bytes.workspace = true
async-trait.workspace = true
zeromq.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
serde.workspace = true
snap = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
