[package]
name = "h-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# eBPF SSL-uprobe capture (Linux only). Off by default so macOS dev builds and
# the Linux CI stay green without the aya/BPF toolchain. Phase 1b adds the aya
# loader (`src/ebpf/source.rs`) + BPF program under this gate; the cross-platform
# pump (`src/ebpf/mod.rs`) is always built and tested.
ebpf = []

[dependencies]
h-common.workspace = true
pcap.workspace = true
libc.workspace = true
bytes.workspace = true
async-trait.workspace = true
zeromq.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
serde.workspace = true
snap = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
