[package]
name = "h-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# eBPF SSL-uprobe capture (Linux only). Off by default so macOS dev builds and
# the Linux CI stay green without the aya/BPF toolchain. Enables the aya loader
# (`src/ebpf/source.rs`) + the out-of-band BPF program build (build.rs +
# aya-build). The cross-platform pump (`src/ebpf/mod.rs`) is always built/tested.
ebpf = ["dep:aya", "dep:h-ebpf-common", "tokio/net"]

[dependencies]
h-common.workspace = true
pcap.workspace = true
libc.workspace = true
bytes.workspace = true
async-trait.workspace = true
zeromq.workspace = true
# `net` for the ThinProbeSource TCP/mTLS listener (always built, not eBPF-gated).
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
serde.workspace = true
snap = "1"
# Probe↔central distributed-capture transport: compact frame codec (wire.rs)
# + mTLS listener (thin_probe.rs). The codec is cross-platform and unit-tested
# on every build; ThinProbeSource is a plain CaptureSource (no eBPF needed).
postcard.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
x509-parser.workspace = true
# Stream/Sink extensions for the length-delimited Framed transport.
futures-util.workspace = true

# eBPF deps are Linux-only and optional (pulled in only by the `ebpf` feature),
# so neither macOS nor a default Linux build compiles them.
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }
h-ebpf-common = { path = "../h-ebpf-common", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# In-memory throwaway PKI for the loopback mTLS integration test (no committed keys).
rcgen.workspace = true

# Smoke test for live eBPF capture: runs EbpfSource and prints captured HTTP
# request lines. Linux + `--features ebpf` + CAP_BPF only.
[[example]]
name = "ebpf_smoke"
required-features = ["ebpf"]
