[package]
name = "h-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
