[package]
name = "h-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
h-common.workspace = true
h-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
tiktoken-rs = "0.11"
regex = "1"
bitflags = "2"

[[test]]
name = "agent_primitives_fixtures"
required-features = ["test-support"]

[dev-dependencies]
toml = "0.8"
