[package]
name = "h-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
h-common.workspace = true
h-capture.workspace = true
bytes.workspace = true
httparse.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
pcap.workspace = true
criterion.workspace = true
# Already a normal dependency above; restated here so integration tests
# (tests/synth_pipeline.rs) can name `h_capture` directly.
h-capture.workspace = true

[[bench]]
name = "hot_paths"
harness = false
