[package]
name = "h-storage-clickhouse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
h-common.workspace = true
h-llm.workspace = true
h-metrics.workspace = true
h-protocol.workspace = true
h-turn.workspace = true
h-storage.workspace = true
clickhouse.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
uuid.workspace = true
bytes.workspace = true
