[package]
name = "h-storage-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
h-common.workspace = true
h-llm.workspace = true
h-metrics.workspace = true
h-protocol.workspace = true
h-turn.workspace = true
h-storage.workspace = true
duckdb.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
# Enables `fault_injection` module + injection hooks on backend paths.
# Off by default: production builds and `cargo test --workspace` see
# no extra code. Tests that exercise recovery paths opt in explicitly.
fault-injection = []
