[package]
name = "h-turn"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
h-llm.workspace = true
h-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
h-capture.workspace = true
h-metrics.workspace = true
h-protocol.workspace = true
toml = "0.8"
