[package]
name = "ts-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ts-common.workspace = true
ts-llm.workspace = true
ts-storage.workspace = true
ts-turn.workspace = true
ts-pcap-extract = { workspace = true }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tower-http.workspace = true
chrono = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
ts-metrics.workspace = true
