[package]
name = "ts-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ts-common.workspace = true
ts-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
tiktoken-rs = "0.11"
regex = "1"
bitflags = "2"
