[package]
name = "ts-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
ts-common.workspace = true
ts-capture.workspace = true
bytes.workspace = true
httparse.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
