[package]
name = "ts-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ts-common.workspace = true
ts-llm.workspace = true
ts-protocol.workspace = true

tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
webpki-roots.workspace = true
rustls-native-certs.workspace = true

bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
lru.workspace = true
async-trait.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-stream = "0.1"
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
tracing-subscriber = { workspace = true }
