[package]
name = "ts-storage-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ts-common.workspace = true
ts-llm.workspace = true
ts-metrics.workspace = true
ts-protocol.workspace = true
ts-turn.workspace = true
ts-storage.workspace = true
duckdb.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
# Enables `fault_injection` module + injection hooks on backend paths.
# Off by default: production builds and `cargo test --workspace` see
# no extra code. Tests that exercise recovery paths opt in explicitly.
fault-injection = []
