[package]
name = "ts-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ts-common.workspace = true
ts-llm.workspace = true
ts-metrics.workspace = true
ts-turn.workspace = true
duckdb.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
