[package]
name = "ts-turn"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ts-llm.workspace = true
ts-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
ts-capture.workspace = true
ts-metrics.workspace = true
ts-protocol.workspace = true
