[package]
name = "heron"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "heron"
path = "src/main.rs"

[dependencies]
h-common.workspace = true
h-capture.workspace = true
h-protocol.workspace = true
h-llm.workspace = true
h-metrics.workspace = true
h-storage.workspace = true
h-storage-duckdb.workspace = true
h-turn.workspace = true
h-api.workspace = true
h-pcap-extract.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
axum.workspace = true
duckdb.workspace = true
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

[features]
console = ["dep:rust-embed", "dep:mime_guess"]

[dev-dependencies]
tempfile = "3"
duckdb = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
libc = { workspace = true }
