[package]
name = "tokenscope"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tokenscope"
path = "src/main.rs"

[dependencies]
ts-common.workspace = true
ts-capture.workspace = true
ts-protocol.workspace = true
ts-llm.workspace = true
ts-metrics.workspace = true
ts-storage.workspace = true
ts-turn.workspace = true
ts-api.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
axum.workspace = true
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

[features]
console = ["dep:rust-embed", "dep:mime_guess"]

[dev-dependencies]
tempfile = "3"
duckdb = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
